Fix after upgrade to flink 1.20
Signed-off-by: David Kornel <kornys@outlook.com>